cmake_minimum_required(VERSION 3.22)
project(ysda-cuda LANGUAGES C CXX CUDA)

set(CMAKE_CXX_STANDARD             20)
set(CMAKE_MODULE_PATH              "${CMAKE_SOURCE_DIR}/tools/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_EXPORT_COMPILE_COMMANDS  ON)

find_package(Catch REQUIRED)
find_package(CUDAToolkit REQUIRED)

include(tools/cmake/TestSolution.cmake)
include(tools/cmake/BuildFlags.cmake)
add_subdirectory(tools)

function(add_if_exists name)
  if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${name})
    add_subdirectory(${name})
  endif()
endfunction()

add_if_exists(00-hello-world)
add_if_exists(01-gpu-puzzles-1)
add_if_exists(01-device-add)
add_if_exists(01-reverse-string)
add_if_exists(01-grayscale)
add_if_exists(02-gemm-v0)
add_if_exists(03-transpose-v0)
add_if_exists(03-dot-product)
add_if_exists(04-transpose-v1)
add_if_exists(04-gemm-v1)
add_if_exists(05-quantization)
add_if_exists(05-quaternions)
add_if_exists(05-softmax-long)
add_if_exists(06-moe-topk)
add_if_exists(06-cutlass-gemm)

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/private)
  add_subdirectory(private)
endif()
